# Sistema_Tutor

./: CMakeLists.txt  README.md  README.txt  simulazione
data/: highway.txt  passages.txt  runs.txt
include/: autostrada.h  editor.h  simulatore.h  tutor.h  veicolo.h
src/: autostrada.cpp  editor.cpp  main_simulazione.cpp  main_tutor.cpp  simulatore.cpp  tutor.cpp  veicolo.cpp
